# moonpond

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.planning/: PROJECT.md  (+4 more)
backend/: pyproject.toml
backend/backend/: main.py  state.py
backend/backend/godot/: runner.py
backend/backend/models/: requests.py  responses.py
backend/backend/pipelines/: assets.py  base.py  exporter.py  registry.py
backend/backend/pipelines/agentic/: README.md  file_generator.py  image_gen_client.py  input_map.py  models.py  pipeline.py  spec_generator.py  tripo_client.py  verifier.py
backend/backend/pipelines/contract/: contract_generator.py  game_manager_generator.py  models.py  node_generator.py  pipeline.py  scene_assembler.py  spec_expander.py  tscn_builder.py  wiring_generator.py
backend/backend/stages/: code_generator.py  contract_generator.py  contract_models.py  exporter.py  game_designer.py  game_manager_generator.py  models.py  node_generator.py  prompt_enhancer.py  spec_expander.py  visual_polisher.py  wiring_generator.py
backend/backend/tests/: test_agentic_models.py  test_agentic_pipeline.py  test_contract_generator.py  test_contract_models.py  test_contract_pipeline.py  test_file_generator_prompt.py  test_game_manager_generator.py  test_generate.py  test_input_map.py  test_multi_stage_pipeline.py  test_node_generator.py  test_registry.py  test_runner.py  test_scene_assembler.py  test_spec_expander.py  test_stages.py  test_static.py  test_stream.py  test_task1_app.py  test_tscn_builder.py  test_tscn_validator.py  test_wiring_generator.py
(+194 files in other folders)
