[project]
name = "moonpond-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.0",
    "aiofiles",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-anyio",
    "httpx",
    "anyio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

# Dev server: cd backend && uv run uvicorn backend.main:app --reload --port 8000
